# discord-polybot

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  llm.rs
