[package]
name = "discord-bot-all-purpose"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.2"
cloud-vision-flows = "0.1.1"
discord-flows = "0.6.1"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.5"
http_req_wasi = "0.11.1"
log = "0.4.19"
once_cell = "1.18.0"
openai-flows = "0.8"
serde_json = "1.0.96"
# serenity = "0.11.5"
slack-flows = "0.3.4"
store-flows = "0.3.1"
tokio_wasi = { version = "1.25.2", features = ["macros", "rt"] }
web-scraper-flows = "0.1.0"
